# unrealon-parser-amazon

./: .gitignore  README.md  amazon_config.py  config.env.example  package.json  pyproject.toml
catalog/: __init__.py  models.py  parser.py
extractor/: __init__.py  simple_extractor.py
